# graphic-study-demo

./: CMakeLists.txt  README.en.md  README.md  cube.ppm  main.cpp  start.sh  test_fixes.sh
docs/: architecture_overview.md  build_and_run.md  coordinate_system_convention.md  materials_lighting.md  software_renderer_redesign.md  testing.md  video_rendering.md
src/: main.cpp
src/core/math/: matrix.cpp  matrix.h  vector.cpp  vector.h
src/core/platform/: constants.h  logger.cpp  logger.h  sdl_wrapper.cpp  sdl_wrapper.h
src/core/types/: color.cpp  color.h  material.cpp  material.h  texture.cpp  texture.h  triangle.cpp  triangle.h  vertex.cpp  vertex.h
src/demos/: scene_3d_demo.cpp  scene_3d_demo.h  transform_demo.cpp  transform_demo.h
src/graphics/: graphics.cpp  graphics.h
src/renderer/effects/: antialiasing.cpp  antialiasing.h  ssaa.cpp  ssaa.h
src/renderer/lighting/: light.cpp  light.h
src/renderer/pipeline/: depth_buffer.cpp  depth_buffer.h  geometry_processor.cpp  geometry_processor.h  geometry_stage.cpp  geometry_stage.h  rasterizer_3d.cpp  rasterizer_3d.h  render_queue.cpp  render_queue.h  render_target.cpp  render_target.h  screen_vertex.h  shading_pipeline.cpp  shading_pipeline.h  software_renderer.cpp  software_renderer.h  triangle_rasterizer.cpp  triangle_rasterizer.h
src/renderer/preview/: sdl_preview.cpp  sdl_preview.h  sdl_preview_stub.cpp
src/scene/: camera.cpp  camera.h  mesh.cpp  mesh.h  scene.cpp  scene.h
src/util/: ffmpeg_utils.cpp  ffmpeg_utils.h
tests/: CMakeLists.txt  clip_tests.cpp  depth_stencil_tests.cpp  material_lighting_tests.cpp  transform_tests.cpp  unit_tests.cpp  vertex_normals_tests.cpp  viewport_tests.cpp
